First pass at rendering

--- a/app/views/meter_cat/meter/index.html.erb
+++ b/app/views/meter_cat/meter/index.html.erb
@@ -1,1 +1,20 @@
-<i>Meters go here</i>
+<div class="meter_cat">
+    <table border="1">
+        <tr>
+            <th></th>
+            <% @range.each do |date| %>
+                <th><%= date %></th>
+            <% end %>
+        </tr>
+
+        <% @meters.keys.sort.each do |name| %>
+            <tr>
+                <th><%= name %></th>
+                <% @range.each do |date| %>
+                    <td><%= @meters[ name ][ date ] || 0 %></td>
+                <% end %>
+            </tr>
+        <% end %>
+
+    </table>
+</div>
