--- a/app/views/meter_cat/meter/index.html.erb
+++ b/app/views/meter_cat/meter/index.html.erb
@@ -1,20 +1,4 @@
 <div class="meter_cat">
-    <table border="1">
-        <tr>
-            <th></th>
-            <% @range.each do |date| %>
-                <th><%= date %></th>
-            <% end %>
-        </tr>
-
-        <% @meters.keys.sort.each do |name| %>
-            <tr>
-                <th><%= name %></th>
-                <% @range.each do |date| %>
-                    <td><%= @meters[ name ][ date ] || 0 %></td>
-                <% end %>
-            </tr>
-        <% end %>
-
-    </table>
+    <%= meter_title %>
+    <%= meter_table( @meters, @range ) %>
 </div>
