Added meter descriptions

--- a/app/views/meter_cat/meter/index.html.erb
+++ b/app/views/meter_cat/meter/index.html.erb
@@ -1,4 +1,5 @@
 <div class="meter_cat">
     <%= meter_title %>
     <%= meter_table( @meters, @range ) %>
+    <%= meter_descriptions( @meters ) %>
 </div>
