Beefed up fixture and added symlink so it can be loaded into development environment under dummy app. Minor view / helper simplification

--- a/app/views/meter_cat/meter/index.html.erb
+++ b/app/views/meter_cat/meter/index.html.erb
@@ -1,5 +1,7 @@
 <div class="meter_cat">
-    <%= meter_title %>
+    <h1><%= t( :table_title, :scope => :meter_cat ) %></h1>
     <%= meter_table( @meters, @range ) %>
+
+    <h2><%= t( :description_title, :scope => :meter_cat ) %></h2>
     <%= meter_descriptions( @meters ) %>
 </div>
