--- a/app/views/meter_cat/meter/index.html.erb
+++ b/app/views/meter_cat/meter/index.html.erb
@@ -3,29 +3,10 @@
     <h1><%= t( :title, :scope => :meter_cat ) %></h1>
     <%= meter_table( @meters, @range ) %>
 
+    <h2><%= t( :search, :scope => :meter_cat ) %></h2>
+    <%= meter_form( @date, @days, @names ) %>
 
-  <h2><%= t( :search, :scope => :meter_cat ) %></h2>
-    <%= form_tag( '', :method => :get ) do %>
-      <p>
-        <%= label_tag( :date, t( :date, :scope => :meter_cat ) ) %>
-        <%= select_date( @date, :prefix => :date, :order => [ :month, :day, :year ] ) %>
-      </p>
-
-      <p>
-        <%= label_tag( :days, t( :days, :scope => :meter_cat ) ) %>
-        <%= text_field_tag( :days, @days, :size => 4 ) %>
-      </p>
-
-      <p>
-        <%= label_tag( :names, t( :names, :scope => :meter_cat ) ) %>
-        <%= select_tag( :names, options_for_select( MeterCat::Meter.names, @names ), :multiple => true ) %>
-      </p>
-
-        <%= submit_tag( t( :search, :scope => :meter_cat ) ) %>
-    <% end %>
-
-
-  <h2><%= t( :descriptions, :scope => :meter_cat ) %></h2>
-  <%= meter_descriptions( @meters ) %>
+    <h2><%= t( :descriptions, :scope => :meter_cat ) %></h2>
+    <%= meter_descriptions( @meters ) %>
 
 </div>
