Minor cosmetic improvements

--- a/app/views/meter_cat/meter/index.html.erb
+++ b/app/views/meter_cat/meter/index.html.erb
@@ -3,10 +3,15 @@
     <h1><%= t( :title, :scope => :meter_cat ) %></h1>
     <%= meter_table( @meters, @range ) %>
 
+
+    <hr/>
     <h2><%= t( :search, :scope => :meter_cat ) %></h2>
     <%= meter_form( @date, @days, @names ) %>
 
+    <hr/>
     <h2><%= t( :descriptions, :scope => :meter_cat ) %></h2>
     <%= meter_descriptions( @meters ) %>
 
+    <hr/>
+    <%= MeterCat::Meter.count %> records
 </div>
