Mail support integrated with dummy app. Mail support fully tested. Integrated status_cat gem with dummy app for system eval.

--- a/spec/dummy/app/views/root/index.html.erb
+++ b/spec/dummy/app/views/root/index.html.erb
@@ -1,3 +1,5 @@
 <ul>
   <li><a href="/meter_cat">/meter_cat</a></li>
+  <li><a href="mail">mail</a></li>
+  <li><a href="/status_cat">/status_cat</a></li>
 </ul>
