Made dummy app a bit more user friendly

--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/meter_cat">/meter_cat</a></li>
+  <li><a href="mail">mail</a></li>
+  <li><a href="/status_cat">/status_cat</a></li>
+</ul>
+
 <%= yield %>
 
 </body>
